fix(styles): add margin between search and version banner on small screens

--- a/src/components/pages/doc-javascript-api/doc-javascript-api.module.scss
+++ b/src/components/pages/doc-javascript-api/doc-javascript-api.module.scss
@@ -22,6 +22,10 @@
 .info {
   margin-top: 165px;
 
+  @include lg-down {
+    margin-top: 205px;
+  }
+
   @include sm-down {
     margin-top: 240px;
   }
